Bug 458987 - Minimum window height is too tall for 780px tall screens
Summary: Minimum window height is too tall for 780px tall screens
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.1
Platform: Other Linux
: HI major
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords: regression
: 448575 463916 464523 465734 467196 468761 470130 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-09-11 06:10 UTC by Phoenix Awakened
Modified: 2023-08-13 13:50 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.08
Sentry Crash Report:


Attachments
Screenshot of the Bug (245.10 KB, image/png)
2022-09-11 06:10 UTC, Phoenix Awakened
Details
Another form of the bug. (233.65 KB, image/png)
2022-09-11 06:11 UTC, Phoenix Awakened
Details
Right Panel (229.08 KB, image/png)
2022-09-19 06:32 UTC, Phoenix Awakened
Details
Gwenview window takes too much vertical space when editing tools are shown (115.77 KB, video/x-matroska)
2023-01-06 21:59 UTC, Alex Čižinský
Details
problem.png (241.28 KB, image/png)
2023-01-24 02:06 UTC, hsdredgun
Details
problem2.png (264.31 KB, image/png)
2023-01-24 02:06 UTC, hsdredgun
Details
Clear visibility of issue when panels are floating (117.10 KB, image/png)
2023-05-09 15:09 UTC, Phoenix Awakened
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Phoenix Awakened 2022-09-11 06:10:18 UTC
Created attachment 151974 [details]
Screenshot of the Bug

SUMMARY

Gwenview opens out of the margins and panels on desktop


STEPS TO REPRODUCE
1. Open any image( the first part of bug ).
2. Move the opened session of Gwenview with mouse to reduce the size, and then again maximize it.
3. Bug changes to another form.

OBSERVED RESULT

Gwenview opening out of the panels.

EXPECTED RESULT

It should fit in the panels.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
EndeavourOS(x86_64)
KDE Plasma Version: 5.25.5
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.6

ADDITIONAL INFORMATION
Comment 1 Phoenix Awakened 2022-09-11 06:11:29 UTC
Created attachment 151975 [details]
Another form of the bug.
Comment 2 Nate Graham 2022-09-13 18:40:49 UTC
A few questions:
1. What is your screen resolution?
2. Is your panel set to "Windows can Cover" mode?
3. What window placement setting are you using?
4. What distro are you using?
5. Does the issue happen if you use the default Breeze window decoration theme?
Comment 3 Phoenix Awakened 2022-09-14 15:03:33 UTC
(In reply to Nate Graham from comment #2)
> A few questions:
> 1. What is your screen resolution?  1360 x 780
> 2. Is your panel set to "Windows can Cover" mode? No, it is always visible.
> 3. What window placement setting are you using?  I don't know how to change this, thus it should be in default state.
> 4. What distro are you using? EndeavourOS.
> 5. Does the issue happen if you use the default Breeze window decoration
> theme?  Yes. I had tried many themes. 


Also, I had tried 3-4 other image viewers, and had not encountered this bug with them.
Comment 4 Nate Graham 2022-09-15 16:09:31 UTC
Can you answer the questions?
Comment 5 Phoenix Awakened 2022-09-16 09:01:26 UTC
I thought I answered your questions by writing them in front of the questions ! Now I am pasting the answers along with the questions : 


> 1. What is your screen resolution?  1360 x 780.
> 2. Is your panel set to "Windows can Cover" mode? No, it is set to "always visible".
> 3. What window placement setting are you using?  I don't know how to change this, thus it should be in default state.
> 4. What distro are you using? EndeavourOS.
> 5. Does the issue happen if you use the default Breeze window decoration > theme?  Yes.
Comment 6 Phoenix Awakened 2022-09-16 09:03:17 UTC
1. What is your screen resolution?  1360 x 780.
 2. Is your panel set to "Windows can Cover" mode? No, it is set to "always visible".
3. What window placement setting are you using?  I don't know how to change this, thus it should be in default state.
4. What distro are you using? EndeavourOS.
5. Does the issue happen if you use the default Breeze window decoration theme?  Yes.
Comment 7 Nate Graham 2022-09-19 03:09:57 UTC
Thanks. What happens if you put your panel on the left or right side? Does the window open in a size that makes the bottom get cut off, or does the bottom of the window perfectly touch the bottom of the screen?
Comment 8 Phoenix Awakened 2022-09-19 06:30:40 UTC
(In reply to Nate Graham from comment #7)
What happens if you put your panel on the left or right side? Does 
 the window open in a size that makes the bottom get cut off, or does the
 bottom of the window perfectly touch the bottom of the screen?



If putting panel on left side, I had not seen Gwenview getting passed through that panel. But from the bottom side, some of the actions remain inaccessible, as I had described. And then everything is according to the detail I provided initially.



Please see the attachment named as "Right Panel". It is how Gwenview looks as per your question.
Comment 9 Phoenix Awakened 2022-09-19 06:32:37 UTC
Created attachment 152207 [details]
Right Panel
Comment 10 Nate Graham 2022-09-19 21:34:54 UTC
Seems like the real issue is that Gwenview's minimum height is too tall. Can reproduce that.
Comment 11 Phoenix Awakened 2022-09-20 15:20:23 UTC
(In reply to Nate Graham from comment #10)
> Seems like the real issue is that Gwenview's minimum height is too tall. Can
> reproduce that.



Thanks for confirming the issue.
Comment 12 Alex Čižinský 2023-01-06 21:52:41 UTC
*** Bug 463916 has been marked as a duplicate of this bug. ***
Comment 13 Alex Čižinský 2023-01-06 21:59:42 UTC
Created attachment 155081 [details]
Gwenview window takes too much vertical space when editing tools are shown

Info from the duplicate bug 463916
- video from the duplicate bug that shows the bug well I think 
- Important: that this is happening only when editing tools are open 
- possible solution is to make editing tools scroll-able
Comment 14 Alex Čižinský 2023-01-06 22:12:06 UTC
*** Bug 448575 has been marked as a duplicate of this bug. ***
Comment 15 Nate Graham 2023-01-23 21:46:15 UTC
*** Bug 464523 has been marked as a duplicate of this bug. ***
Comment 16 hsdredgun 2023-01-24 02:06:44 UTC
Created attachment 155550 [details]
problem.png

Good day Nate,

Sorry I don't know if that really make sense what I said for reporting 
the bug here is couple of picture that show the problem...

Can't see the crop menu at the bottom I think the app need resizing...

Have a fantastic day!

On 24/1/23 08:46, Nate Graham wrote:
> https://bugs.kde.org/show_bug.cgi?id=458987
>
> Nate Graham <nate@kde.org> changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                   CC|                            |hsdredgun@hotmail.com
>
> --- Comment #15 from Nate Graham <nate@kde.org> ---
> *** Bug 464523 has been marked as a duplicate of this bug. ***
>
Comment 17 hsdredgun 2023-01-24 02:06:45 UTC
Created attachment 155551 [details]
problem2.png
Comment 18 Brahmastya 2023-02-02 10:18:21 UTC
The current solution to this problem is to try switching to a different desktop. The first issue appeared with the KDE Gear 22.08 release, and 22.12 still has it.
Comment 19 Brahmastya 2023-02-02 10:26:46 UTC
(In reply to Brahmastya from comment #18)
> The current solution to this problem is to try switching to a different
> desktop. The first issue appeared with the KDE Gear 22.08 release, and 22.12
> still has it.

I mean move Gwenview to another desktop, this workaround is temporary (if you close the app then you need to repeat that step).
Comment 20 Patrick Silva 2023-02-15 02:06:48 UTC
*** Bug 465734 has been marked as a duplicate of this bug. ***
Comment 21 medin 2023-04-01 20:26:47 UTC
With 5.27.3, the bug is still present (laptop screen 15.6"), the real problem is that the list of items in "Operations" tabs is too big, for example for png files it shows 19 items that stretch the height of the whole window, so its minimum height becomes bigger than the height of the screen. Normally, those items should be put inside a scollpane with a scrollbar to adapt to any screen height.
Comment 22 Nate Graham 2023-04-13 16:55:36 UTC
*** Bug 467196 has been marked as a duplicate of this bug. ***
Comment 23 Bug Janitor Service 2023-04-20 19:08:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/gwenview/-/merge_requests/195
Comment 24 Patrick Silva 2023-04-21 13:49:56 UTC
*** Bug 468761 has been marked as a duplicate of this bug. ***
Comment 25 Nate Graham 2023-04-21 18:17:38 UTC
Git commit 0366519f27e27659059ad9ac44a13aa279e063d4 by Nate Graham.
Committed on 21/04/2023 at 18:17.
Pushed by ngraham into branch 'master'.

Remove "Delete" and "Create Folder" actions from sidebar

The number of actions in Gwenview's sidebar currently causes the main
window with default settings to be taller than the amount of vertical
space available for users with 1366x768 screens and the default 44px
bottom panel. In this configuration, Gwenview's footer becomes
inaccessible, breaking various parts of the app's functionality, such as
the ability to zoom and switch sidebar tabs.

I know what you're about to say. Yes, it's 2023 and people are still
using 1366x768 screens. Unfortunately they still will be for a long
time; this is the second most common screen resolution for
desktop/laptop computers worldwide. See
https://gs.statcounter.com/screen-resolution-stats/desktop/worldwide

We could fix this by making the sidebar actions list scrollable, but
that's kind of an ugly solution as scrollable lists of actions
present an unpleasant UX overall.

So instead, let's remove two actions from the sidebar:
- The "Delete" action, which is actively dangerous to the user's data
  and should definitely not live next to safe actions.
- The "Create Folder" action is super niche in purpose as Gwenview is
  not really meant to be a file  management app.

Both actions remain visible in the GUI menu structure and accessible
via keyboard shortcut.
FIXED-IN: 23.08

M  +9    -1    app/fileopscontextmanageritem.cpp

https://invent.kde.org/graphics/gwenview/commit/0366519f27e27659059ad9ac44a13aa279e063d4
Comment 26 paninomaninodesu 2023-04-21 18:43:18 UTC
(In reply to Nate Graham from comment #25)
> 
> So instead, let's remove two actions from the sidebar:
> - The "Delete" action, which is actively dangerous to the user's data
>   and should definitely not live next to safe actions.
> - The "Create Folder" action is super niche in purpose as Gwenview is
>   not really meant to be a file  management app.
> 

Is this really necessary?
Because from my experience Gwenview works just right on X11, all elements fits perfectly. It's only on Wayland that this problems occurs. Can't it just adapt the side on Wayland like on X11?
Also, making the windows rules also work on Wayland would "solve" this problem.
Comment 27 Nate Graham 2023-04-21 19:06:45 UTC
No.

The reason it "works" on X11 is because KWin allows window to be resized to be smaller then their minimum sizes. When this happens, non-scrollable content inside the application window will be cut off; in this case, the bottom two entries in the sidebar.

On Wayland, KWin doesn't permit this, so instead the whole bottom part of the window gets cut off.

The behaviors are different on X11 vs Wayland, but in both cases things are getting cut off that shouldn't be, and in both cases, it can be solved by setting a smaller minimum window size by removing some items from the sidebar, which is that that patch did.
Comment 28 John Veness 2023-04-23 14:31:00 UTC
(In reply to Nate Graham from comment #25)
> We could fix this by making the sidebar actions list scrollable, but
> that's kind of an ugly solution as scrollable lists of actions
> present an unpleasant UX overall.

Although I agree that the two actions you mentioned can be removed from the list, I would like to comment on the "scrollable lists of actions present an unpleasant UX overall". In particular, has there been any input from UX and Accessibility experts on this? Are there some existing design guidelines or research you can point to?

Speaking for myself, I very much dislike when apps (and websites, for that matter) require a relatively large minimum height (or width). As someone with eyesight problems, I often increase font sizes or UI scaling, so what might fit OK by default in a particular screen size with default settings, may not for other people. Or, I might want to split my screen with Gwenview at the top and something else at the bottom.

For whatever reason, personally I would very much prefer to have a scrollable list of actions than an overly large (in my opinion) hard-coded minimum height for the app. Thanks for reading!
Comment 29 kodintent 2023-05-05 07:49:36 UTC
Hi.
This bug is not resolved by removing 2 items from the options list.
- because of accessibility needs.

users will scale font so that this issue will still occur - such as using global scale or force font dpi.
-  it is an accessibility issue, some Gwenview options are not usable to those requiring larger font.
-  even on my 1080p screen with larger font size, removing 2 menu items will not make all the items appear. 

the nearest solution to this issue is a scrollable list.
- scrollable options list are common, and are an accepted UX style. Not ugly.
- meets accessibility needs
- because some users will always scale fonts larger than anyone can imagine, and apps must handle it.

i have reopened this bug for the above reasons, even though im not part of the in crowd.

kodintent.
Comment 30 Phoenix Awakened 2023-05-09 15:09:05 UTC
Created attachment 158802 [details]
Clear visibility of issue when panels are floating
Comment 31 Phoenix Awakened 2023-05-09 15:17:06 UTC
Comment on attachment 158802 [details]
Clear visibility of issue when panels are floating

>DOCX
>

>³.Þ£·k§ñ¨=¡oû	YÙê
>ô~TÙ§§·Þö責ìÛå*É>t¤nY°ãxï^­½ú
\(û+&n£jåÓæÙgCû8ÕÃGñ92Ru:.ª¶Mçý;Hü$ò¯GÉ7ÁûOëãlp>Ê«oé·NÿyäZOÿýÚ,+Úw6ýï}wËOÃE¡Äª¤óqÇËT";oÿö/ïÔF@ØwæSÊO¦oØt×É]Ò½_ïq²ØÄƸ¶5<Û¥¤
wm;T§.ÝMlâÐaÝsþëÖ³w;uFJÐzßè-«]ªþ½³ËǬÞó×®+ú[ÕÑ"']RºîÆ¥×SÃs_ß´ôìëð&7'EëR©¿÷»j©iòäèwvDÌðl[ìlÐÂíí·Î\,
>
ñö
¶Øxãa/÷ÿubwÝ·äî`îîyºIÎà{b:Ç¿vÎ1çÖ¦W°BLÐÒ2i¢*þZ^µ¿b±xf}(`C:'mêý¸#Df{ï1{ä±D+ïÀì£õ¬ ÀòúãȾëè®ýWàÙSFVkºé\!ò%2Р{Ó;Ôn§þ@YYé{ï.aУî3æËXóc¬ï*¢^ãG¼?Påäîêã,d»ý&xK´1Á{îìfðJ÷#ØÇ»Ìkp½Ô4<AG÷ê;Ñ_cq+×àV,Êð]
> )6`Ö{pþ1ñD#0|¦a)ªÁf{j1ÖÙÀº
>óRÀ`]?4õ)&~¾ú*U
õÇ:À¾½ê*f,kÀ¸U{×Yk&j&OVf4½ñxkÐÉ68çÜ3ëXá\f
í Y°ààé|æ|® ¡!¬W°_f¯ãQ~Æû#-3Ø:Àä$·,rмa!4¦.ºg&°¯@Õ~é9mêzß1ªÎ¨Ú¥4_1o_OITûh&R++`Ç[ź7ö7¡AuÕ;üqiÉ­Ã÷öN 0ËM{ÌÐÆ,h¬r1pÚÔ[÷¼ßj6±MCu)c/õ×b5$ÓæèfÁf&Ö£×,~ÔßWç靈)wç͸A ã3
Yø²°­`¥]\zÆYw
>ÀóÂk|õAqØ"Ps0L6çc»Í¡9¦îuܺhrÛg/kê!@Ó·{}SÀk]`SÅ)éÎ|Zc=8JÇ+æuÐ3$SWY`º>@³cõ)3ì ³9.Kúµ+Pº3nùÞùlÊ:¶çõsÞY}
>À²LÎkÁ^~zÚGMκ
>ÌXæà/¨¤Ö­xæ2±ßP+±Ú»ßPõ/ùiZÐXóMðÒzczð©»fíjFOÓ²k3_À´ ²M©Y§øÀWÌ&ò3(Â0
aö}x,@S1ïCyÜöápÆPÇà©wrg챺Ï×4Ö>³Î¸¤?^±Ñ£
9ü"`"~fPz¾ÌѸ9Ú!uf­ÈjÑïkø)Ââñç,]
>À¬¡>§1°ÞßP»¿èZ];1¶®A-VW£öãð'`?d,LdJ$vðð1õi'0?űãuÁ2KMü×[Û4xbh¶&µqî¯au1Ø6X©Dø<ÿ,YlníSµûíuüòëo|}}5ί˰aVܤ®õ\2̰SSuwû
¼à×­ùÙÕc°@«øO<|ìï#Ç÷ý}øÇ_6O:ÕF$dØEHÎÃìÝ;ÿ(,,`5BÞ³¼¶Y³dk¬IOмÏ_÷Zýç)&Ìç´LÅõ訨¯×­
>½z¾üÚùyyÑ/3¬+­^oØe:6ß7öÀÍæÿ°*I°(ÀÌxx(àÁÃÇtîÀ[ÀHhÈ4ÒÔ¼Ì{´Y-%\}ß«ukB½½Ã¬Ù³) ¨è¨¨?vl+//éÚõ_öðWÈWb¢ûu³¯oEKüç³Õ
>lÅÊUîBsÊÛÿYó©>ýÌìa#F	ÔåKQìø­¼¼\ëã}Ö«õö̳ÄPÉúfÌÑ;pÃC
>@g¨oÙXz+p
CEBaïÐ>^ÞÞi)wÁô³;tX¶x¼Z¾xé²³fÿµûÏO?sþÜÙÇÚÚÚ¹{¸WUI몿·t)M»»ûû~øOä)¹L6gîAK¿%¯-^¶|æ¬Ù;¶ÿ¦R©Ø"6^Nÿ=uy5À 0pÇC
>@æúËoÈÞ¬fÏÒ`Øî}*''ç~L¾ìâÒªwhèÞ¿vBÎýûÏäiOÙì·ÍÏË0 ,5åNZjêìû²	g?ó\fzÖ¥ç]BCûìÙýgM#gÿòÔSeeeZCÓxgbfÇ,öC
>Ï
>À\3á!ú5{Ñc¢/½nmÇN.|»²¢Ð´Xlëêê¶hñ7ßz"Ry¹ùÚúë¯#Gzgñ2itç¿'\×j*,<¢]`Û/¿øB®PÅbWW··,]¸hq]#B¡î?/&ÕÇä}Á?V49s-PãsG#L
ML¤Þ¹8uÆ¿û¦ºZV\\øÓ\ÓjòØÃ§N6|ä˯½ñÅÕ§|ýü¦MùÇöß
>)Bª««úá÷ø¸XÝÃm4VÝ2=­Ý®ÉYíÃæØ3é¡SÏl¢)<,oø4;f
R¢T*9Ô;´OyYiâõÉS¦zy{B]üýD"aûÀb±½B¡¼wïR¡	ê/¾ØNüìÜâcc¯_OP)/+»~ýÚä)Ó¼¼½Õøù0as|ÁjMøB`ÈÔYÓ&OPüfy`ÑÀèn´º|vvöÏL9óÖÍ[{ÿúkÚé_ü÷k'gç²²Òû÷äåå5jèð4M>.=x`ßÚµT·Ð©s>}ûUwï6bäHBHzVúÿ¾újïî¿1cíëÕØ·çAö}6²ðßÐ)&JÏ2~A÷¼Æ7¹<¢ºtéιrÝÝ~­ÈçMYDütÝï,ÛÔ]6ÒÞÓ´±úÎè9Gë|i¤]ÚXýmê¹ÌZÓj¥¯ojúÕø¢uD©TÎßûÝöÙËd<`Uæí^¿uæb¡Ph ·o°ÅÆÐI³ô÷-c.E(ã|Ã
>únÎ÷çÙd¸#?>u䲿î:loïc:éLÚÀØE~æZ?NñÔ4ûv¨¿±©¨»
>eà¡ÃwÐ_í¥ÀÖ&âáZxÕXÞþåé±¥íìÇ££9C¬¿¯£wKÿ)3îo)À|?£¹P¼1i¥ëw:{iÂ{ÂæÀâù¬û2Ü«¹\7ÿ×[·÷á¢z°çíq£G7cRú"iÃócǽ¹óªi-ÛJp­AZ¤+]3.®÷(ãÁ3<ú
>håíÖïOåýÃþÎR6õ0àÉ"jÑWãÀÏÜrcÔMX §nOËcò@UXÍÉgXØx±Ú¼\LfBÐ:¸4õöî-#>ëÙàôöÁï=ñ°HjãÙyð³ko§LÝöú[ûZ¿ôvÛÄ¿NßÈQxô¾ð9Ë[ÿ8O|Î}ïÝiAvÈr.þþóS׳Ëm¼BF<¿èÕâ&ú`¬~;@.(P|Ï`9ÍQC'ôáðéÌ`´] ³Ö3¾à $¤Îy®}Ù¿_-où»Êê6¦Ï?)Ptìûog׬¨º²õ§XÞCC[˲¯l_±øTÏCº»UdÛòÛ¿Å4%ÿþñ»â=ç¾³`GÆ¡¯>ÝqKÖ
¬XL4`¼´Ï nK	´ð°(å~M
% C¦{uzaÞé-Ý	õß¾ÓVÿðÉÂçfÎzuî`	¥xS»Z@0õÝo.ü`Þ@{BD]ýèÝ7½7§§
å>,P)Ϲ/·ë7gÁSÃÇÌ;Ü~u9+
@ÿO°f¬g³Ü°Aq#E(ÐÀa«hÔSý~F!°ü4ÍJEÛÍ|eÌéGl>Ú!ĶöüÁÅ¿þuéÎÃJ¹\VIÓNõß¾~¾BBDv%òñuÊÉÉB«h¢(.,QyÔº§'®S§\©ZüÓÕz²Rj7y5ëCb®,Uñ³L0_Ñoj§%	вQ¡ÏÏxá«Ëþ^&&ÄBÝðå®»þ/¸*ÂóÞË¿8Y­QChSÎZ¡½ÐÕÍ¢ªû¿¶ú¹®6µÄoñ _Ë_`9ü¬vÍ7PÑ|ãëæMîb0æ°Ù@WY=Ç0ùZ0û	eeÔ¬÷WÊäJB	EiÞODZxL Mȱím*®Ùs!)õîĨ'+íð/4µà»}õF&<Ïhm¤:UXîO¨]ÑXØl
À4À¼YfH0ùÕÉu÷ó)ÉÐç_ó]ÝòÅú=÷CçLôc1ß¶óók>7È9óøo?ý°y÷¿YÄÙÿz *¤K÷¦A¦ÎçXföaCºêl6ðÎ`]½Ý:Ìä#é.ÅúqlS}¸¯oJúÆÍð/7'EëR©¿÷»í³5ÉxÀªÌÛ½~ëÌÅBíõz
xû[l<µàY&á>_WqÖÚ9ͱ7VÞG²¸oÏ|´`IHèÅû£MëÙÖe1rÆý¯%05fÐâS<DvʽM¶9ëºFÊ|w?ÝEØÄö¬¶`=`«Å§xB0)@o0oJcLW*°ÚÇcÀÔUfàÕ§ø¸ozæhNïÆøÆzâikîͨ)iÂãÀ«OX%íóþxÛ]°¾«Uôl³F3¼6Ø ,r¦@
>;ö¤5Âeá-úôôÆjÛ
«`}93¦(f_ÁG?úW«óòA8µÀn2Â,²î2<dê¯%¥}L"2½	4ÕiÓZ¶0õÑ;fÊø9#-phXoa¦ô©¾¶ÐÓ Á¬ú]D¦ðûS¿>yBã³]BB&Núõk9·_Yøg°A¤v:Ú4½-è«õ·bhm¬n¬TTósLcê,é'Ô%4u		YþÁG_ý÷sÛg¥)&èÎèîÁD-	¹Ü§¡u×ÓO¤'#ÂO@»ëM¬Rß¾}zÀZlllS¦¦Ôñ¿Î,ÀÊ÷ßM¾uËÄöù¢3xä=/ Â#"&LÜ.0¢99Ù;wì¸s[kCzYÂ2OÁ$gÀ6 {LFÐlágæ|hILJ¨çÿï?|Ls!úþ¿««õÄÿúÔåx2Á3G¿ó߯^R©H`ÀܹÚ÷²ÙtÆmQã|EUû³Ëö\Ï3<l¨©nþÿ¾üßÍJsûp³&Fmãï?|Ôèß~ÝuI}âVR!ÄÉÙeéò÷Î=v¼¯¿ßç,V<ÿâKÝ{ôT*T11Ñþ±½¤ø±s«e|p3ñFØ poÖ÷23·lþånj*=Ùͺ²ë3\?À*»`ì3"À>
>Xÿóÿß²Ï4ÔþÓí;TJ+u~vGi3gîÛ³ká+¯äç?z}ᢼÜü×^·èWmD¶/¾üª­
!ÄÙɹkî¶êÅçIºqãõ7ßriåªîíãöø|X ®òLª°{b¡fñl@Sñ0cüߨ_g'çÊJYµLÇiJxæä©ë×®UWKÛøHÜ$§N­ªª.¯¨8zä`ûöAÞÞ­)BT*å¹3gryä©b[q@@Û}°ýëhLÙX;}3á'`¡ø¿éî3鶬¼ÜÁÑA}?_R¡ÌÏÏS¿vrrªÉ¤Uê·¥¥eÐNRQQQ®>^UU%Ëì4G`ì>9·S:^1c<@é;a¤YU0?)frÿߤ±IÔý¬,'GçN;ë<M×®/++ÛÚ:8Ø«ÛiÕÊ"Tyy!D 9»8«988mm+¥:GÂj̺ܳ1S`ê?ßøÙÐÕ͵ñþê'j>, Åй×Ýý{W¢£^zõ5[[ñõø8¹RéíÓº¨ P«Xö½{¹ù¹cÆOÜõ;D"ÑøS22ÓóórÅb{@8|Äèëñ×JKKG+­feeé7dýÁùéÝ.þÆñÐ䫨δHTmlZ *ª;¶äÌóÜ;ï.'4þóÿ+,(Ь(VþúóÏsç½ôËíØ«W¶mÙ"ÉÅbûêêê´®öjí±éçÊJktÙ f¸3?£sÎô0BCãÖ2A"Àd<?P¹âS#Bï+k§ººúðÁýî×*óá{K5ßæçç}ûÕPÔë[7mf8B¦Sø]SÕ	!ºÒáḬ̂îùÿüÏ.¯
Comment 32 Phoenix Awakened 2023-05-09 15:20:04 UTC
Comment on attachment 158802 [details]
Clear visibility of issue when panels are floating

It seems that the Gwenview is not considering the panel is boundary for expansion. 

What if we make the editing options for Gwenview in Drop-down Menu ?
Comment 33 Nate Graham 2023-05-22 20:50:46 UTC
*** Bug 470130 has been marked as a duplicate of this bug. ***
Comment 34 Nate Graham 2023-05-22 20:52:08 UTC
For further improvements on this--such as using a scrollview, even though I don't think it would be an improvement--let's track them in additional bug reports. The idea behind this one was to solve the problem for the default settings, not all conceivably possible combinations of settings. Thanks everyone!
Comment 35 medin 2023-05-22 21:38:52 UTC
(In reply to Nate Graham from comment #34)
> For further improvements on this--such as using a scrollview, even though I
> don't think it would be an improvement--let's track them in additional bug
> reports. The idea behind this one was to solve the problem for the default
> settings, not all conceivably possible combinations of settings. Thanks
> everyone!

Truthfully, I would rather be happy to have a scrollview with all functions inside it, rather than those popup fancy solutions. And a scrollview is much easier to access and can be adapted to any screen size.
Comment 36 John Veness 2023-05-23 09:58:40 UTC
(In reply to Nate Graham from comment #34)
> For further improvements on this--such as using a scrollview, even though I
> don't think it would be an improvement--let's track them in additional bug
> reports. The idea behind this one was to solve the problem for the default
> settings, not all conceivably possible combinations of settings. Thanks
> everyone!

Personally I think it would have been better to keep this bug open, but as requested, I have opened Bug 470159 for further discussion.
Comment 37 Patrick Silva 2023-08-13 13:50:20 UTC
This bug persists with Gwenview master on neon unstable.